# hexos

./: .gitignore  CMakeLists.txt  CONTRIBUTE.md  LICENSE  Makefile  README.md  hexos.code-workspace
core/: Makefile
core/boards/stm32l073xx/: startup.s
core/boards/stm32l073xx/include/: comp.hpp  crc.hpp  crs.hpp  dma.hpp  flash.hpp  gpio.hpp  modules.hpp  pwr.hpp  rcc.hpp  rcc_hal.hpp  syscfg.hpp
core/boards/stm32l073xx/linker/: rz.ld
core/boards/stm32l073xx/source/: rcc.cpp
core/boards/stm32l0xx3xx/include/: modules.hpp
core/common/include/: common_types.hpp
examples/blinky/: Makefile
examples/blinky/include/: main.hpp
examples/blinky/source/: main.cpp
examples/empty/: Makefile
examples/empty/source/: main.cpp
firmware/source/: main.cpp
include/: main.hpp
source/: main.cpp
